Fixed Img Size on Mobile and Smooth Scroll
Added scroll-behavior smooth and removed unnecessary JS for the smooth scroll effect. Resized pictures to look better on mobile devices.

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ footer a {
     width: 75vw;
   }
   .img img {
-    width: 100%;
+    width: 90%;
     margin-bottom: 0;
   }
   #about {
